--- a/Pets_R_Us/Views/Home/Privacy.cshtml
+++ b/Pets_R_Us/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Our People";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>This is the page for all our people</p>
