--- a/Pets_R_Us/Views/PetImageTables/Index.cshtml
+++ b/Pets_R_Us/Views/PetImageTables/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-outline-primary" asp-action="Create"><i class="fa-solid fa-arrow-up-from-bracket"></i> <b>Upload</b></a>
 </p>
 <table class="table">
     <thead>
@@ -37,10 +37,39 @@
                 @Html.DisplayFor(modelItem => item.ImageCaption)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a class="btn btn-outline-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="fa-regular fa-pen-to-square"></i></a> |
+@*               <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>*@
+                    <button data-id="@item.Id" class="btn btn-outline-danger deleteBtn" type="button"><i class="fa-regular fa-trash-can"></i></button>
             </td>
         </tr>
 }
     </tbody>
 </table>
+
+<form id="deleteForm" asp-action="Delete">
+    <input type="hidden" id="petImageId" name="Id"/>
+</form>
+
+@section Scripts{
+    <script>
+        $(function(){
+            $(".deleteBtn").click(function(e){
+                swal({
+                    title: "Are you sure?",
+                    text: "Are you sure you want to delete this picture?",
+                    icon: "warning",
+                    buttons: true,
+                    dangerMode: true
+                }).then((confirm) => {
+                    if(confirm){
+                        var btn = $(this);
+                        var id = btn.data("id");
+                        $("#petImageId").val(id);
+                        $("#deleteForm").submit();
+                    }
+                });
+            });
+        });
+
+    </script>
+}
