--- a/Pets_R_Us/Views/PetImageTables/Index.cshtml
+++ b/Pets_R_Us/Views/PetImageTables/Index.cshtml
@@ -20,6 +20,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ImageCaption)
+            </th>            
+            <th>
+                @Html.DisplayNameFor(model => model.PetImageUrl)
             </th>
             <th></th>
         </tr>
@@ -27,14 +30,17 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.PetPic)
-            </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PetPic)
+                </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ImageTitle)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ImageCaption)
+            </td>            
+            <td>
+                <img src="@item.PetImageUrl" class="img-thumbnail"/>
             </td>
             <td>
                     <a class="btn btn-outline-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="fa-regular fa-pen-to-square"></i></a> |
