--- a/Pets_R_Us/Views/Shared/_Layout.cshtml
+++ b/Pets_R_Us/Views/Shared/_Layout.cshtml
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Pets_R_Us.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body style="background-color:saddlebrown">
+    
     <header>
         <nav class="navbar navbar-dark bg-dark navbar-toggleable-sm">
             <div class="container-fluid">
