--- a/Pets_R_Us/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Pets_R_Us/Areas/Identity/Pages/Account/Register.cshtml
@@ -73,6 +73,13 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <select asp-for="Input.UserRole"
+                        asp-items="@(Model.Roles)">
+                    <option>Please select a role</option>
+                </select>
+                <span asp-validation-for="Input.UserRole" class="text-danger"></span>
+            </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
