--- a/Pets_R_Us/Areas/Identity/Pages/_ViewStart.cshtml
+++ b/Pets_R_Us/Areas/Identity/Pages/_ViewStart.cshtml
@@ -1,3 +1,18 @@
 ﻿@{
-    Layout = "/Views/Shared/_Layout.cshtml";
+    if (this.User.IsInRole("Cat") || !this.User.Identity.IsAuthenticated)
+    {
+        Layout = "~/Views/Shared/_CatLayout.cshtml";
+    }
+    if (this.User.IsInRole("Dog") || !this.User.Identity.IsAuthenticated)
+    {
+        Layout = "~/Views/Shared/_DogLayout.cshtml";
+    }
+    if (this.User.IsInRole("Cat-Dog") || !this.User.Identity.IsAuthenticated)
+    {
+        Layout = "~/Views/Shared/_CatDogLayout.cshtml";
+    }
+    else
+    {
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }
 }
