--- a/Pets_R_Us/Views/PetImageTables/Index.cshtml
+++ b/Pets_R_Us/Views/PetImageTables/Index.cshtml
@@ -21,6 +21,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.ImageCaption)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PetImageUrl)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -36,6 +39,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.ImageCaption)
             </td>
+                <td>
+                    <img src="@item.PetImageUrl" class="img-thumbnail" />
+                </td>
             <td>
                     <a class="btn btn-outline-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="fa-regular fa-pen-to-square"></i></a> |
 @*               <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>*@
