Got themes working hooray

--- a/Pets_R_Us/wwwroot/css/Cat.css
+++ b/Pets_R_Us/wwwroot/css/Cat.css
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-    background-image: url('https://wallpaperaccess.com/full/2378668.jpg');
+    background-image: url('https://th.bing.com/th/id/OIP.JdjSF7yPa2PodsGvlG0RCQHaE6?pid=ImgDet&rs=1');
 }
 /* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
