--- a/Pets_R_Us/wwwroot/css/Dog.css
+++ b/Pets_R_Us/wwwroot/css/Dog.css
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-    background-image: url('https://wallpaperaccess.com/full/2378668.jpg');
+    background-image: url('https://th.bing.com/th/id/R.732440a404bebef70fe332b2aede9762?rik=SV5X1as3sHt0fg&riu=http%3a%2f%2fwww.pixelstalk.net%2fwp-content%2fuploads%2f2016%2f04%2fHD-Cute-Dog-Wallpaper-backgrounds.jpg&ehk=zM6X8%2bi5ikW1QlWzhrQJvvwViQwrOzv0Zyol%2bx2JsBM%3d&risl=&pid=ImgRaw&r=0');
 }
 /* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
