--- a/Pets_R_Us/Views/Shared/_CatDogLayout.cshtml
+++ b/Pets_R_Us/Views/Shared/_CatDogLayout.cshtml
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/fontawesome.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Pets_R_Us.styles.css" asp-append-version="true" />
+   
+    
 </head>
-<body style="background-color:yellow">
+
+    
 
     <header>
         <nav class="navbar navbar-dark bg-dark navbar-toggleable-sm">
@@ -55,7 +57,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+<div class="container" 
         <main role="main" class="pb-3" style="margin-top:25px;">
             @RenderBody()
         </main>
@@ -71,5 +73,4 @@
     <script src="~/lib/sweetalert/sweetalert.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
-</body>
 </html>
