--- a/Pets_R_Us/Views/Shared/_CatDogLayout.cshtml.css
+++ b/Pets_R_Us/Views/Shared/_CatDogLayout.cshtml.css
@@ -1,4 +1,20 @@
-﻿body {
+﻿html {
+    font-size: 14px;
+}
+
+@media (min-width: 768px) {
+    html {
+        font-size: 16px;
+    }
+}
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    background-image: url('https://wallpaperaccess.com/full/2378668.jpg');
 }
 /* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
