--- a/Pets_R_Us/Views/Shared/_CatLayout.cshtml
+++ b/Pets_R_Us/Views/Shared/_CatLayout.cshtml
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/fontawesome.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Pets_R_Us.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/Cat.css" asp-append-version="true" />
+    
 </head>
-<body style="background-image: url("https://www.readersdigest.ca/wp-content/uploads/2019/11/cat-10-e1573844975155.jpg");">
-    >
+<body>
 
     <header>
         <nav class="navbar navbar-dark bg-dark navbar-toggleable-sm">
