--- a/Pets_R_Us/Views/Shared/_CatLayout.cshtml.css
+++ b/Pets_R_Us/Views/Shared/_CatLayout.cshtml.css
@@ -1,4 +1,22 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
+﻿html {
+    font-size: 14px;
+}
+
+@media (min-width: 768px) {
+    html {
+        font-size: 16px;
+    }
+}
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    background-image: url('https://www.wallpapertip.com/wmimgs/30-308354_cute-cat-wallpapers-hd.jpg');
+}
+/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
