--- a/Pets_R_Us/Views/Shared/_DogLayout.cshtml
+++ b/Pets_R_Us/Views/Shared/_DogLayout.cshtml
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/fontawesome.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Pets_R_Us.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/Dog.css" asp-append-version="true" />
+   
 </head>
-<body style="background-color:green">
+<body>
 
     <header>
         <nav class="navbar navbar-dark bg-dark navbar-toggleable-sm">
