--- a/Pets_R_Us/Views/Shared/_Layout.cshtml
+++ b/Pets_R_Us/Views/Shared/_Layout.cshtml
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/fontawesome.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Pets_R_Us.styles.css" asp-append-version="true" />
+   
 </head>
-<body style="background-color:saddlebrown">
+<body>
     
     <header>
         <nav class="navbar navbar-dark bg-dark navbar-toggleable-sm">
