Added the new pages and started to style them.

--- a/Pets_R_Us/Views/Shared/_CatLayout.cshtml
+++ b/Pets_R_Us/Views/Shared/_CatLayout.cshtml
@@ -31,19 +31,16 @@
                                 <a class="nav-link active" aria-current="page" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Our People</a>
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="OurPeople">Our People</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Our Services</a>
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="OurServices">Our Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Our Location</a>
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="OurLocation">Our Location</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Logout</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="PetImageTables" asp-action="Index">Profile</a>
+                                <a class="nav-link" asp-area="" asp-controller="PetImageTables" asp-action="Index">Pet Photos</a>
                             </li>
                         </ul>
                         <form class="d-flex mt-3" role="search">
