--- a/Pets_R_Us/Views/Shared/_Layout.cshtml
+++ b/Pets_R_Us/Views/Shared/_Layout.cshtml
@@ -30,10 +30,10 @@
                                 <a class="nav-link active" aria-current="page" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Our People</a>
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="OurPeople">Our People</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Our Services</a>
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="OurPeople"> Our Services</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Our Location</a>
