--- a/Pets_R_Us/Views/_ViewStart.cshtml
+++ b/Pets_R_Us/Views/_ViewStart.cshtml
@@ -1,15 +1,19 @@
 ﻿@{
-    if (this.User.IsInRole("Cat") || !this.User.Identity.IsAuthenticated)
+    if (this.User.IsInRole("Cat"))
     {
         Layout = "~/Views/Shared/_CatLayout.cshtml";
     }
-   
-    if (this.User.IsInRole("Dog") || !this.User.Identity.IsAuthenticated)
+
+    else if (this.User.IsInRole("Dog"))
     {
         Layout = "~/Views/Shared/_DogLayout.cshtml";
     }
-    
-    if (this.User.IsInRole("Cat-Dog") || !this.User.Identity.IsAuthenticated)
+
+    else if (this.User.IsInRole("Cat-Dog"))
+    {
+        Layout = "~/Views/Shared/_CatDogLayout.cshtml";
+    }
+    else
     {
         Layout = "~/Views/Shared/_CatDogLayout.cshtml";
     }
