--- a/Pets_R_Us/Views/PetImageTables/Index.cshtml
+++ b/Pets_R_Us/Views/PetImageTables/Index.cshtml
@@ -39,9 +39,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.ImageCaption)
             </td>
-                <td>
-                    <img src="@item.PetImageUrl" class="img-thumbnail" />
-                </td>
+            <td>
+                <div>
+                    <img src="@item.PetImageUrl" class="img-fluid; rounded" style="max-width: 25%; max-height: 25%"/>
+                </div>
+            </td>
             <td>
                     <a class="btn btn-outline-warning" asp-action="Edit" asp-route-id="@item.Id"><i class="fa-regular fa-pen-to-square"></i></a> |
 @*               <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>*@
